# Autism-Spectrum-Disorder-Detection

./: .gitattributes  .gitignore  .wakatime-project  Dockerfile  Main.py  asd_detection.ipynb  main.py  pyproject.toml  questions.py  utils.py
DataSet/Images/: data.csv
DataSet/Screening/: data.csv
DataSet/Screening/Autism Adolescent/: Autism-Adolescent-Data.arff  csv_result-Autism-Adolescent-Data.csv  new_csv_result-Autism-Adolescent-Data.csv
DataSet/Screening/Autism adults/: csv_result-Autism-Adult-Data.csv  new_autism_screening_2.csv  new_csv_result-Autism-Adult-Data.csv
DataSet/Screening/Autism child/: new_csv_result-Autism-Child-Data.csv
DataSet/Screening/Autism toddler/: Toddler data description.docx  new Toddler Autism dataset July 2018.csv
DataSet/Screening/Screening question/: Autism_Data Description.docx  new_Autism_Data.csv
Image Classification/: image_prediction.ipynb  logistic_regression.sav  naive_bayes.sav
Image Classification/ResNet/: model.h5  resNet.ipynb
Image Classification/TWSVM_Package/package/: twin_svm.ipynb
Preprocessed Data/: data_1_merge.ipynb  data_2_merge.ipynb  data_3_merge.ipynb  data_4_merge.ipynb  images.ipynb  merging.ipynb
Screening/: knn_screening.sav  logistic_regression_screening.sav  naive_screening.sav  svc_screening.sav
pages/: 01-Screening.py
